[tool.poetry]
name = "django-csv-filters"
version = "0.1.0"
description = "Filter django querysets using csv files."
authors = ["Timothy Hobbs"]
license = "LGPL3"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
Django = "^3.2.4"
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
